--- a/EcoMap/Info.plist
+++ b/EcoMap/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>&quot;izin&quot;</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Çevre kirliliği bildirimlerinde konumunuzu kullanmak istiyoruz.</string>
 	<key>UIApplicationSceneManifest</key>
