--- a/EcoMap/Info.plist
+++ b/EcoMap/Info.plist
@@ -5,7 +5,7 @@
 	<key>NSAppleMusicUsageDescription</key>
 	<string>&quot;izin&quot;</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Çevre kirliliği bildirimlerinde konumunuzu kullanmak istiyoruz.</string>
+	<string>&quot;Çevre kirliliği bildirimlerinde konumunuzu kullanmak istiyoruz.&quot;</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
